--- a/internal/ignition/templates/agent.service
+++ b/internal/ignition/templates/agent.service
@@ -3,21 +3,16 @@ Type=simple
 Restart=always
 RestartSec=3
 StartLimitInterval=0
-Environment=HTTP_PROXY={{.HTTPProxy}}
-Environment=http_proxy={{.HTTPProxy}}
-Environment=HTTPS_PROXY={{.HTTPSProxy}}
-Environment=https_proxy={{.HTTPSProxy}}
-Environment=NO_PROXY={{.NoProxy}}
-Environment=no_proxy={{.NoProxy}}{{if .PullSecretToken}}
-Environment=PULL_SECRET_TOKEN={{.PullSecretToken}}{{end}}
+EnvironmentFile=/etc/agent.env
 TimeoutStartSec={{.AgentTimeoutStartSec}}
 ExecStartPre=/usr/local/bin/agent-fix-bz1964591 {{.AgentDockerImg}}
 ExecStartPre=podman run --privileged --rm -v /usr/local/bin:/hostbin {{.AgentDockerImg}} cp /usr/bin/agent /hostbin
-ExecStart=/usr/local/bin/agent --url {{.ServiceBaseURL}} --infra-env-id {{.infraEnvId}} --agent-version {{.AgentDockerImg}} --insecure={{.SkipCertVerification}}  {{if .HostCACertPath}}--cacert {{.HostCACertPath}}{{end}}
+ExecStart=/usr/local/bin/agent --url {{.ServiceBaseURL}} --infra-env-id ${INFRAENV_ID} --agent-version {{.AgentDockerImg}} --insecure={{.SkipCertVerification}}  {{if .HostCACertPath}}--cacert {{.HostCACertPath}}{{end}}
 
 [Unit]
 Wants=network-online.target
 After=network-online.target
+ConditionPathExists=/etc/agent.env
 
 [Install]
 WantedBy=multi-user.target
